--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Lato:ital,wght@0,300;0,700;0,900;1,100;1,300;1,400&family=Montserrat:wght@800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400;1,600;1,700&display=swap');
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: outfit;
 }
 #root{
   min-height: 100vh;
