--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,7 +14,7 @@
     padding: 20px;
 }
 .main .nav img{
-    width: 2%;
+    width: 1%;
     border-radius: 50%;
 }
 
@@ -34,6 +34,9 @@
    background: -webkit-linear-gradient(16deg,#4b90ff, #ff5546 );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
+}
+.main-container .greet p{
+    opacity: 0.2;
 }
 .main-container .cards{
     display:  grid;
@@ -107,4 +110,71 @@
     margin: 15px auto;
     text-align: center;
     font-weight: 300;
+}
+.result{
+    padding-left:  0px 5%;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+.result::-webkit-scrollbar{
+    display: none;
+}
+.result-title{
+margin-top:  40px 0;
+display: flex;
+align-items: center;
+gap:  20px;
+}
+.result img{
+    width: 40px;
+    border-radius: 50%;
+}
+.result-data{
+    display: flex;
+    align-items: start;
+    margin-top: 5%;    
+}
+.loader{
+   width: 100%; 
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color: #f6f7f8;
+    background: linear-gradient(to right,#9ed7ff, #ffffff, #9ed7ff );
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+@keyframes loader{
+    0%{
+        background-position:  -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
+.result-data p{
+    font-size: 17px;
+    font-family: 300;
+    line-height: 1.8;
+}
+
+@media (max-width: 600px) {
+    .main-bottom input{
+      flex: none;  
+      width: 150px;
+    }
+    .main-bottom img{
+        width: 20px;
+    }
+    .search-box{
+        padding: 5px 10px;
+    }
+    .search-box div{
+        gap: 5px;
+    }
 }
